--- a/SearchAlongRoute/build.gradle
+++ b/SearchAlongRoute/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'com.huawei.agconnect'
     id 'kotlin-android'
     id 'com.github.dcendents.android-maven'
 }
@@ -8,7 +9,7 @@ group='com.github.metinvandar'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 24
