--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.hms.searchalongrouteexample"
@@ -19,26 +19,26 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    signingConfigs {
+ /*   signingConfigs {
         release {
             storeFile file("C:\\Users\\m84166978\\Desktop\\searchalongroute.jks")
             storePassword "searchalongroute"
             keyAlias "searchalongroute"
             keyPassword "searchalongroute"
         }
-    }
+    } */
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+           // signingConfig signingConfigs.release
         }
 
-        debug {
+      /*  debug {
             debuggable true
             signingConfig signingConfigs.release
-        }
+        } */
     }
 
     buildFeatures {
